--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,5 +1,12 @@
+browser.autorefresh.SL__Browsers_ChromeBrowser=true
+browser.highlightselection.SL__Browsers_ChromeBrowser=true
 config.folder=
+external.project.url=
 file.reference.GitHub-dtmb=.
+file.reference.NetBeansProjects-FlappyBird=.
 files.encoding=UTF-8
-site.root.folder=${file.reference.GitHub-dtmb}
+server=INTERNAL
+site.root.folder=${file.reference.NetBeansProjects-FlappyBird}
+start.file=index.html
 test.folder=
+web.context.root=/FlappyBird
